// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation Creating from existing Menus allows a navigation block to be created from existing menus 1`] = `
"<!-- wp:navigation -->
<!-- wp:navigation-link {\\"label\\":\\"Sample Page\\",\\"type\\":\\"post_type\\",\\"id\\":322} -->
<!-- wp:navigation-link {\\"label\\":\\"Google\\",\\"type\\":\\"custom\\",\\"id\\":323} -->
<!-- wp:navigation-link {\\"label\\":\\"Esse harum sequi magnam quis debitis et\\",\\"type\\":\\"post_type\\",\\"id\\":368} -->
<!-- wp:navigation-link {\\"label\\":\\"Et porro consequuntur necessitatibus consequatur\\",\\"type\\":\\"post_type\\",\\"id\\":369} -->
<!-- wp:navigation-link {\\"label\\":\\"Libero esse nisi illo\\",\\"type\\":\\"post_type\\",\\"id\\":370} /-->
<!-- /wp:navigation-link -->
<!-- /wp:navigation-link -->
<!-- /wp:navigation-link -->
<!-- /wp:navigation-link -->

<!-- wp:navigation-link {\\"label\\":\\"Sample Page\\",\\"type\\":\\"post_type\\",\\"id\\":324} -->
<!-- wp:navigation-link {\\"label\\":\\"Qui sapiente necessitatibus totam\\",\\"type\\":\\"post_type\\",\\"id\\":371} -->
<!-- wp:navigation-link {\\"label\\":\\"Dicta molestiae ut dolor quidem adipisci quae\\",\\"type\\":\\"post_type\\",\\"id\\":461} /-->
<!-- /wp:navigation-link -->

<!-- wp:navigation-link {\\"label\\":\\"Repellat aut qui eveniet\\",\\"type\\":\\"post_type\\",\\"id\\":372} /-->
<!-- /wp:navigation-link -->

<!-- wp:navigation-link {\\"label\\":\\"Sit impedit similique cupiditate\\",\\"type\\":\\"post_type\\",\\"id\\":373} /-->
<!-- /wp:navigation -->"
`;

exports[`Navigation Creating from existing Menus creates an empty navigation block when the selected existing menu is also empty 1`] = `
"<!-- wp:navigation -->
<!-- wp:navigation-link /-->
<!-- /wp:navigation -->"
`;

exports[`Navigation Creating from existing Menus does not display option to create from existing menus if there are no menus 1`] = `"<!-- wp:navigation /-->"`;

exports[`Navigation allows a navigation block to be created using existing pages 1`] = `
"<!-- wp:navigation -->
<!-- wp:navigation-link {\\"label\\":\\"Home\\",\\"type\\":\\"page\\",\\"id\\":1,\\"url\\":\\"https://this/is/a/test/page/home\\"} /-->

<!-- wp:navigation-link {\\"label\\":\\"About\\",\\"type\\":\\"page\\",\\"id\\":2,\\"url\\":\\"https://this/is/a/test/page/about\\"} /-->

<!-- wp:navigation-link {\\"label\\":\\"Contact Us\\",\\"type\\":\\"page\\",\\"id\\":3,\\"url\\":\\"https://this/is/a/test/page/contact\\"} /-->
<!-- /wp:navigation -->"
`;

exports[`Navigation allows an empty navigation block to be created and manually populated using a mixture of internal and external links 1`] = `
"<!-- wp:navigation -->
<!-- wp:navigation-link {\\"label\\":\\"WP\\",\\"id\\":\\"https://wordpress.org\\",\\"url\\":\\"https://wordpress.org\\"} /-->

<!-- wp:navigation-link {\\"label\\":\\"Contact\\",\\"id\\":1,\\"url\\":\\"https://this/is/a/test/search/get-in-touch\\"} /-->
<!-- /wp:navigation -->"
`;

exports[`Navigation allows pages to be created from the navigation block and their links added to menu 1`] = `
"<!-- wp:navigation -->
<!-- wp:navigation-link {\\"label\\":\\"A really long page name that will not exist\\",\\"id\\":1,\\"url\\":\\"https://this/is/a/test/create/page/my-new-page\\"} /-->
<!-- /wp:navigation -->"
`;
